2005-07-30  Jeff Muizelaar  <jeff@infidigm.net>

	* src/iccompose.c: (fbCombineMaskAlphaU),
	(fbCombineDisjointOutPart), (fbCombineDisjointInPart),
	(fbCombineConjointOutPart), (fbCombineConjointInPart),
	(fbStore_a8r8g8b8), (fbStore_x8r8g8b8), (fbStore_a8b8g8r8),
	(fbStore_x8b8g8r8), (fbStore_r8g8b8), (fbStore_b8g8r8),
	(fbStore_r5g6b5), (fbStore_b5g6r5), (fbStore_a1r5g5b5),
	(fbStore_x1r5g5b5), (fbStore_a1b5g5r5), (fbStore_x1b5g5r5),
	(fbStore_a4r4g4b4), (fbStore_x4r4g4b4), (fbStore_a4b4g4r4),
	(fbStore_x4b4g4r4), (fbStore_a8), (fbStore_r3g3b2),
	(fbStore_b2g3r3), (fbStore_a2r2g2b2), (fbStore_a4),
	(fbStore_r1g2b1), (fbStore_b1g2r1), (fbStore_a1r1g1b1),
	(fbStore_a1b1g1r1), (fbStore_a1), (fbFetch_external),
	(fbStore_external), (fbFetch_transform), (fbFetcha_transform):
	s/uint(8|16|32)_t/CARD(8|16|32)/

2005-07-30  Jeff Muizelaar  <jeff@infidigm.net>

	* src/ic.c: (fbCompositeSolidMask_nx8x0888),
	(fbCompositeSolidMask_nx8x0565), (fbCompositeTrans_0565xnx0565),
	(fbCompositeTrans_0888xnx0888), (fbCompositeSrcSrc_nxn),
	(pixman_composite):
	Add some optimizations from jaymz. Also adds some compile warnings
	that will hopefully go away as we continue merging.

2005-07-28  Carl Worth  <cworth@cworth.org>

	* configure.in: Add -head to LIBPIXMAN_VERSION after tagging with
	SNAPSHOT_0_1_6.

2005-07-28  Carl Worth  <cworth@cworth.org>

	* NEWS: Add notes for snapshot 0.1.6.
	
	* configure.in: Increment version to 0.1.6.

2005-07-27  Owen Taylor  <otaylor@redhat.com>

	* src/icint.h (FbGetStipPixels): Fix units for stride return
	to be FbStip-sized.

2005-07-16  Jeff Muizelaar  <jeff@infidigm.net>

	* src/ic.c: (pixman_composite):
	Add call to fbCompositeSrcSrc_nxn that I missed.

2005-07-14  Carl Worth  <cworth@cworth.org>

	* src/icimage.c: (pixman_image_set_component_alpha): Whitespace fix.
	(pixman_image_destroy): Fix leak of the clip region associated
	with an image. (NOTE: xserver/render doesn't have the same bug